--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,7 +26,7 @@ jobs:
 
           # Options
           user: postmordial
-          template: terminal
+          template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Africa/Mbabane
           config_twemoji: yes
@@ -48,6 +48,8 @@ jobs:
           plugin_habits_from: 200
           plugin_habits_languages_limit: 8
           plugin_habits_languages_threshold: 0%
+          plugin_introduction: yes
+          plugin_introduction_title: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
